# crafting_interpreters

./: .gitignore  challenges_answer.md  pyproject.toml  test.py
clox/: chunk.c  chunk.h  common.h  compile.sh  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  rle.c  rle.h  scanner.c  scanner.h  stab_alloc.c  stab_alloc.h  table.c  table.h  test_alloc.c  value.c  value.h  vm.c  vm.h
examples/: beacon.lox  hello.lox  init.lox  ret_in_init.lox  setter.lox  yasc.lox
pylox/: Environment.py  Expr.py  LoxCallable.py  Stmt.py  ast_printer.py  errors.py  interpreter.py  keywords.py  lox.py  lox_class.py  lox_function.py  lox_instance.py  lox_parser.py  lox_return.py  native_extensions.py  parser.py  resolver.py  rpn.py  scanner.py  token.py  tokenTypes.py  visitor_node.py
pylox/tools/: generate_ast.py
