
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Szymon Górka", email = "none"},
]
dependencies = [
    "black>=23.7.0",
    "mypy>=1.4.1",
]
requires-python = ">=3.10"
license = {text = "GPL3"}

[tool.pdm.scripts]
precommit= {composite = ["black pylox/", "mypy pylox/ --check-untyped-defs"]}